* game engine prevents ai from repairing a territory more than the number of times it was hit (sgb)

* fix bug 2899005, Long air range icon works only with "fighter" and "bomber" (sgb)

* fix bug 2905298, Wrong message Cant place sea unit on land (sgb)

* fix bug 2905986, occupiedTerrOf don't work with capital (sgb)

* skins can be downloaded/read from the users map folder (sgb)

Changes for 1.1.1

* new neutral flag images (Veqryn)

* allow users the option to replace downloaded maps when downloading (sgb)

* don't allow downloading a map with the same name as one that comes with the default TripleA install (sgb)

* fix bug 2893890, fighters with no movement left can hover in sea zones where carriers can be placed (sgb)

* fix bug 2887488, Add "Display Sea Names" property to display sea zone names (ComradeKev)
 
* Add 'Multiple AA Per Territory' property (ComradeKev)

* Fix nonCombat movement into enemy SZ 2 zones away (ComradeKev)

* Remove Economic Victory from NWO, Great War, and Big World (ComradeKev)

* Add French Rocket to NWO units (ComradeKev)

* Fix WW2V3_Tech_Model constant (ComradeKev)

* Fix buyCruiserIndustrialTechnology unit for Big_World (ComradeKev)

* Various map utility fixes (Stephen Wicklund)

* Right clicking on center picker removes the dot (Stephen Wicklund)

* Center picker displays the name of the center next to the dot (Stephen Wicklund)

* Fix bug in getStrengthOfPotentialAttackers for planes. Reduced frequency of tech purchase. (Kevin Moore)

* fix bug 2831083, WW2V3: Retreat from undefended transports (sgb)

* fix bug 2892836, aa radar in low luck (sgb)

* fix bug 2893144, null pointer on startup (sgb)

* fix bug 2898135, where unloaded infantry could move as mechanized infantry (sgb)

* various paratrooper fixes (sgb)

* fix bug 2892469, paratroops in first enemy territory (sgb)

* StrongAi, Cleaned out unused code. Minor tweak to getStrengthOfPotentialAttackers. (Kevin Moore)

* Fix bug in zip url parsing (Stephen Gallagher)
